# mateupleague

./: .env.example  .gitignore  Makefile  WORKFLOW_STEPS.md  docker-compose.yaml
.github/workflows/: deploy-to-vps.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: backend_pre_start.py  config.py  logging_config.py  main.py  routes.py
backend/app/core/: cors.py  routes.py  security.py
backend/app/core/database/: db.py
backend/app/exceptions/: exceptions.py  messages.py
backend/app/models/: user.py  user_session.py
backend/app/repositories/: user_sessions.py  users.py
backend/app/routers/: auth.py  users.py
backend/app/routers/api_test/: test.py
backend/app/schemas/: token.py  user.py  user_session.py
backend/app/services/: user_sessions.py  users.py
backend/migrations/: env.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  globals.css  main.tsx
frontend/src/components/common/: mateup-logo.tsx
frontend/src/components/common/animations/: variants.tsx
frontend/src/components/layout/: dot-background.tsx  header.tsx
frontend/src/components/ui/: navigation-menu.tsx  rotating-text.tsx  shiny-text.tsx
frontend/src/contexts/: auth-context.tsx  theme-context.tsx  toast-context.tsx
frontend/src/hooks/: useTheme.ts  useToast.ts
frontend/src/lib/constants/: index.ts  navbar-header.ts
frontend/src/services/: apiClient.ts  apiErrorHandler.ts
frontend/src/types/: auth.ts  user.ts
frontend/src/types/components/: link-item-navbar-header.ts
(+3 files in other folders)
